--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
   <footer class="app-footer">
     <span>Protótipo • E-commerce TCG</span>
   </footer>
-
-  <script src="app.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 </html>
 
